# xgbxml

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
docs/: Overview.rst  Overview.rst.bak  auto.py  auto_generated_methods.rst  auto_generated_methods.rst.bak  conf.py  create_gbXML.rst  gbCollection.rst  gbCollection.rst.bak  gbElement.rst  gbElement.rst.bak  get_parser.rst  get_parser.rst.bak  how_do_i_ask_a_question_about_xgbxml.rst  how_do_i_ask_a_question_about_xgbxml.rst.bak  how_do_i_create_a_new_gbxml_file.rst  how_do_i_create_a_new_gbxml_file.rst.bak  how_do_i_edit_a_gbxml_file.rst  how_do_i_edit_a_gbxml_file.rst.bak  how_do_i_open_a_gbxml_file.rst  how_do_i_open_a_gbxml_file.rst.bak  how_do_i_query_a_gbxml_file.rst  how_do_i_query_a_gbxml_file.rst.bak  how_do_i_visualise_a_gbxml_file.rst  how_do_i_visualise_a_gbxml_file.rst.bak  index.rst  index.rst.bak  installation.rst  installation.rst.bak  query_examples.rst  query_examples.rst.bak  requirements.txt  shared_methods.rst  what_extra_methods_does_xgbxml_provide.rst  what_extra_methods_does_xgbxml_provide.rst.bak  what_is_xgbxml.rst  what_is_xgbxml.rst.bak
gbxml/: Campus.py  CartesianPoint.py  ClosedShell.py  Location.py  PlanarGeometry.py  PolyLoop.py  Space.py  Surface.py  __init__.py  gbElement.py  gbXML.py  gbxmlElement.py  parser.py
tests/: su.xml  test_Campus.py  test_CartesianPoint.py  test_ClosedShell.py  test_PolyLoop.py  test_Space.py  test_Surface.py  test_gbElement.py  test_gbSchema.py  test_gbXML.py  test_gbxml_functions.py  test_gbxml_xsd_functions.py  test_geometry_functions.py  (+4 more)
(+3592 files in other folders)
