[metadata]
name = xgbxml
version = 0.0.1
author = Steven Firth
author_email = s.k.firth@lboro.ac.uk
description = lxml parser for gbXML files - create and edit gbXML files with custom Python lxml Element classes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stevenkfirth/xgbxml
project_urls =
    Documentation = https://xgbxml.readthedocs.io/en/latest/
    Source = https://github.com/stevenkfirth/xgbxml
    Bug Tracker = https://github.com/stevenkfirth/xgbxml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = xgbxml
packages = find:
python_requires = >=3.6

[options.packages.find]
where = xgbxml